--- a/wizard.html
+++ b/wizard.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <title>Project about Wizard</title>
         <link rel="stylesheet" href="wizard.css">
 </head>
@@ -10,8 +13,8 @@
    <header class="header">
     <section class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="logo" class="pic">
-            <h1>WIZARD GALLERY<br><span>NFT MARKETPLACE</span></h1>
+            <img src="images/logoImg.svg" alt="logo" class="pic">
+            <!-- <h1>WIZARD GALLERY<br><span>NFT MARKETPLACE</span></h1> -->
         </div>
         <div class="box">
             <label for="search">Search:</label>
@@ -26,174 +29,6 @@
             <button class="btn">Connect Wallet</button>
         </div>
     </section>
-    <section class="pics">
-       <div class="image">
-        <img src="images/image1.png">
-        <h1>Ordinal Codes<br>Hot Collection</h1>
-        </div>
-       <div class="image1"> 
-        <img src="images/image2.png" alt="imag2">
-        <h1>Ordinal Codes<br>Launchpad</h1>
-        </div>
-       <div class="image2">
-        <img src="images/image3.png" alt="image3">
-        <h1>Ordinal Codes</h1>
-        <p>Hot Collection</p>
-        <p>A 15,000-piece combined collection of Stylish Studs and Marvelous Mares</p>
-        <button class="btn">Explore collection</button>
-       </div>
-       <div class="image3">
-        <img src="images/image 4.png" alt="image4">
-        <h1>Ordinal Codes</h1>
-        <p>Launchpad</p>
-       </div>
-    </section>
-    <section class="m-item">
-        <div class="item1">
-            <h1>TOP Collections</h1>
-        </div>
-        <div class="item2">
-            <h2>Last 24 hrs</h2>
-        </div>
-        <div class="item3">
-            <button class="botton">See All</button>
-        </div>
-    </section>
-    <section class="seapa">
-        <div class="seapa1">
-            <img src="images/Frame 16 (1).png" alt="pic1">
-            <h1>Foks</h1>
-            <p>Floor:</p>
-            <p>276.45</p>
-            <p>CORE</p>
-            <img src="images/Frame 16 (2).png" alt="pic2">
-            <h1>Sols SPL20</h1>
-            <p>Floor:</p>
-            <p>276.45</p>
-            <p>CORE</p>
-            <img src="images/Frame 16.png" alt="pic3">
-            <h1>Mad Lads</h1>
-            <p>Floor:</p>
-            <p>276.45</p>
-            <p>CORE</p>
-            <img src="images/Frame 9941.png" alt="pic4">
-            <h1>Bitcoin Frogs</h1>
-            <p>Floor:</p>
-            <p>276.45</p>
-            <p>CORE</p>
-        </div>
-        <div class="seapa2">
-            <img src="images/Frame 16 (1).png" alt="pic5">
-            <h1>Claynosaurz</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-            <img src="images/Frame 16 (2).png" alt="pic6">
-            <h1>OrdiRocks</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-            <img src="images/Frame 16.png" alt="pic7">
-            <h1>bitmap</h1>
-            <p>Floor:</p>
-            <P>276.45 CORE</P>
-            <img src="images/Frame 9941 (1).png" alt="pic8">
-            <h1>Dark City Da...</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-        </div>
-        <div class="seapa3">
-            <img src="images/image 3 (1).png" alt="pic9">
-            <h1>BoDoggos</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-            <img src="images/image 3 (2).png" alt="pic10">
-            <h1>BTC on SOL...</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-            <img src="images/image 3.png" alt="pic11">
-            <h1>Zero Monke Biz</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-            <img src="images/Frame 9941 (1).png" alt="pic12">
-            <h1>Node Wizards</h1>
-            <p>Floor:</p>
-            <p>276.45 CORE</p>
-        </div>
-        <div class="seapa4">
-            <h1>8,741.5</h1>
-            <p>CORE</p>
-            <p>1.58%</p><br>
-            <h5>8,741.5</h5>
-            <p>CORE</p>
-            <p>2.99%</p><br>
-            <h3>8,741.5</h3>
-            <p>CORE</p>
-            <p>3.78</p><br>
-            <h4>8,741.5</h4>
-            <p>CORE</p>
-            <p>0.85%</p>
-
-        </div>
-    </section>
-    <section class="new-seapa">
-        <div class="new">
-            <h1>Launchpad drops</h1>
-            <button class="new-btn">See All</button>
-        </div>
-        <div class="main">
-        <div class="new-seapa1">
-            <img src="images/image 4 (1).png" alt="new">
-            <h1>GREENCY-NEKO</h1>
-            <p>PRICE<br>Items<br>MINTED</p>
-            <p>584.85<br>CORE<br>7,777<br>6789</p>
-        </div>
-        <div class="new-seapa2">
-            <img src="images/image 4 (2).png" alt="new1">
-            <h1>Ordinal Codes</h1>
-            <p>PRICE<br>Items<br>MINTED</p>
-            <p>584.85<br>7,777<br>57%</p>
-        </div>
-        <div class="new-seapa3">
-            <img src="images/image 4 (3).png" alt="new2">
-            <h1>Quekz x SolPlug</h1>
-            <p>PRICE<br>Items<br>MINTED</p>
-            <p>584.85<br>CORE<br>7,777<br>0%</p>
-        </div>
-        <div class="new-seapa4">
-            <img src="images/Frame 9954.png" alt="new3">
-            <h1>SAGA</h1>
-            <p>PRICE<br>Items<br>MINTED</p>
-            <p>584.85<br>CORE<br>7,777<br>22%</p>
-        </div>
-        </div>
-    </section>
-    <section class="pics">
-        <div class="image">
-         <img src="images/image1.png">
-         <h1>Ordinal Codes<br>Hot Collection</h1>
-         </div>
-        <div class="image1"> 
-         <img src="images/image2.png" alt="imag2">
-         <h1>Ordinal Codes<br>Launchpad</h1>
-         </div>
-        <div class="image2">
-         <img src="images/image3.png" alt="image3">
-         <h1>Ordinal Codes</h1>
-         <p>Hot Collection</p>
-         <p>A 15,000-piece combined collection of Stylish Studs and Marvelous Mares</p>
-         <button class="btn">Explore collection</button>
-        </div>
-        <div class="image3">
-         <img src="images/image 4.png" alt="image4">
-         <h1>Ordinal Codes</h1>
-         <p>Launchpad</p>
-        </div>
-     </section>
-     <section class="item">
-        <div class="item1">
-            <h1>Live Auctions</h1>
-            <button class="mybtn">Explore All</button>
-        </div>
-     </section>
 </header>
 </body>
 </html>
